--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "blocks"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "*", features = ["dynamic"] }
-bevy_fly_camera = "0.7.0"
+bevy = { version = "0.7", features = ["dynamic"] }
+bevy_fly_camera = "0.8.0"
 lazy_static = "1.4"
 noise = "0.7"
